--- a/index.html
+++ b/index.html
@@ -11,16 +11,35 @@
     <script src="./library/react-dom.development.js" crossorigin></script>
     <script src="./library/babel.min.js"></script>
     <script type="text/babel">
-      // 组件: 组件是页面上的一部分
-      function LikeButton() {
-        return (<button onClick={() => { console.log('button clicked')}}>Click Me</button>)
+      // 按钮组件
+      function MyButton() {
+        return (
+          <button
+            onClick={() => {
+              console.log("button clicked");
+            }}
+          >
+            I'm a button
+          </button>
+        );
       }
+
+      // 页面组件
+      function MyApp() {
+        return (
+          <div>
+            <h1>welcome to my app</h1>
+            <MyButton />
+          </div>
+        )
+      }
+
       // 获取一个页面根节点
       const rootNode = document.getElementById("root");
       // 创建一个 React 根实例
       const root = ReactDOM.createRoot(rootNode);
       // 使用根实例去渲染一个组件
-      root.render(React.createElement(LikeButton));
+      root.render(React.createElement(MyApp));
     </script>
   </body>
 </html>
